# Statistics-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
include/: Casino.h  CasinoBin.h  CasinoBinManagers.h  CasinoBinStatistics.h  CasinoBinStatisticsGraph.h  CasinoCSV.h  CasinoManagers.h  CasinoPresenter.h  CasinoStatistics.h
lib/include/: BinConverter.h  BinFileIn.h  BinFileOut.h  CSVConverter.h  CSVFileIn.h  CSVFileOut.h  Converter.h  File.h  FileIn.h  FileOut.h  FolderStatistics.h  InputManager.h  OutputManager.h  Presenter.h  PresenterManager.h  Reader.h  Replication.h  Statistics.h  StatisticsManager.h  Writer.h
